feat(home): render latest blog posts on homepage via LatestPosts

--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -9,7 +9,7 @@ coverImage: "/uploads/production/home/ae254961a3de7989b61288b86685c08b5ca1f538-2
 draft: false
 heroBlock:
   _key: ba612ae0cf8d
-  fullWidth: true
+  fullWidth: false
   buttons:
     - _key: e39fe2fafc6c
       _type: buttonObject
@@ -52,6 +52,39 @@ heroBlock:
   mediaType: image
   overlayType: dark
   videoUrl: "https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+logoBlock:
+  _key: 01ed10dd3353
+  _type: logoBlock
+  heading: "Made with the tech you love"
+  logos:
+    - _key: a5a5be47e016
+      image:
+        _type: image
+        url: "/uploads/production/home/7d291cf5fc876c99954f5c59b53f54ca413caae6-777x165.png"
+      link: "https://sanity.io"
+      size: default
+      title: "Sanity"
+    - _key: e0d00b1c857b
+      image:
+        _type: image
+        url: "/uploads/production/home/fcb4f62bc354dd1298d2a2e3e6a2d79f073e1fe1-765x165.png"
+      link: "https://nextjs.org"
+      size: default
+      title: "Next.js"
+    - _key: 868f11b3b502
+      image:
+        _type: image
+        url: "/uploads/production/home/4cb082608a5ce534905f2a468e1dd96b9b52d290-2560x318.png"
+      link: "https://tailwindcss.com"
+      size: large
+      title: "Tailwind"
+    - _key: c4a8a1d69047
+      image:
+        _type: image
+        url: "/uploads/production/home/211c3ffe91db5a1b57ee5d47989b718504f89978-739x155.png"
+      link: "https://resend.com"
+      size: default
+      title: "Resend"
 featureGridBlock:
   _key: 01ed10dd3353
   _type: featureCardsBlock
@@ -139,6 +172,56 @@ featureGridBlock:
       title: "Nulla Pariatur"
   heading: "All the features you need"
   showCallToAction: true
+featuresMinimalBlock:
+  _key: 42828ce31128
+  _type: featuresMinimalBlock
+  buttons:
+    - _key: ac95f5dd4023
+      _type: buttonObject
+      buttonPageReference:
+        _ref: servicesPage
+        _type: reference
+      buttonText: "Get Started"
+      buttonType: internal
+      buttonVariant: tertiary
+      showButton: true
+  content:
+    - _key: a1f337969afa
+      _type: block
+      children:
+        - _key: da3674e22f690
+          _type: span
+          marks: []
+          text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae lectus non metus."
+      markDefs: []
+      style: normal
+  cornerRadiusBottom: straight
+  cornerRadiusTop: rounded
+  enableBorderBottom: false
+  enableBorderTop: true
+  features:
+    - "Consectetur adipiscing sed"
+    - "Tempor incididunt labore ut"
+    - "Magna aliqua enim ad minim"
+    - "Nostrud exercitation labor"
+    - "Ullamco nisi aliquip ex ea"
+    - "Duis aute irure dolor est"
+    - "Velit esse cillum magna ut"
+    - "Pariatur excepteur sint in"
+    - "Occaecat cupidatat non es"
+    - "Excepteur occaecat elit ut"
+  heading: "Build your marketing website with masterthepixel"
+mediaBlock:
+  _key: 09c05a26df7f
+  _type: mediaBlock
+  backgroundType: image
+  backgroundWidth: full
+  dialogType: video
+  image:
+    _type: image
+    altText: "Lorem Ipsum Dolor Amit"
+  overlayType: dark
+  videoUrl: "https://www.youtube.com/watch?v=dQw4w9WgXcQ"
 testimonialBlock:
   _key: 3f4c64bf4370
   _type: testimonialBlock
@@ -157,12 +240,203 @@ testimonialBlock:
     - _key: 1d40f18648a8
       _ref: 95596b7e-e545-4a82-bdcc-7cb4a8b369d7
       _type: reference
+freeformBlock:
+  _key: 3f4c64bf4370
+  _type: freeformBlock
+  border: none
+  columns:
+    - _key: 77beb024d679
+      alignment: left
+      items:
+        - _key: 818742aed7fc
+          _type: singleImageObject
+          image:
+            _type: image
+            altText: "Lorem ipsum dolor sit amet"
+            aspectRatio: rectangle
+        - _key: 992e0e12716274fe4401437c11fe053d
+          _type: spacerObject
+          spacing: medium
+        - _key: a22591ffe2f0
+          _type: headingObject
+          headingSize: md
+          headingTag: h2
+          headingText: "Lorem Ipsum Dolor"
+        - _key: bc9185584849bf8e8d617653cce0ae3b
+          _type: spacerObject
+          spacing: small
+        - _key: 4a70fba6d4dd
+          _type: richTextObject
+          richTextContent:
+            - _key: a0ccda5e5135
+              _type: block
+              children:
+                - _key: f93cdd3bcefb0
+                  _type: span
+                  marks: []
+                  text: "Dolor sit amet lorem ipsum, consectetur adipiscing elit. Donec vitae lectus."
+              markDefs: []
+              style: normal
+        - _key: 8eca494c4871
+          _type: spacerObject
+          spacing: medium
+        - _key: b19eece22e86
+          _type: buttonObject
+          buttonAnchorLocation: currentPage
+          buttonPageReference:
+            _ref: 97854198-13ae-465a-a7f0-3fbc869d9324
+            _type: reference
+          buttonText: "Learn More"
+          buttonType: internal
+          buttonVariant: secondary
+          buttonWidth: auto
+          showButton: true
+      spacing: none
+      title: "Lorem Ipsum Dolor"
+    - _key: 21caac4efa76af75d8710a9b4a11ea1d
+      alignment: left
+      items:
+        - _key: 818742aed7fc
+          _type: singleImageObject
+          image:
+            _type: image
+            altText: "Lorem ipsum dolor sit amet"
+            aspectRatio: rectangle
+        - _key: 992e0e12716274fe4401437c11fe053d
+          _type: spacerObject
+          spacing: medium
+        - _key: a22591ffe2f0
+          _type: headingObject
+          headingSize: md
+          headingTag: h2
+          headingText: "Vulputate Nec Sisi"
+        - _key: bc9185584849bf8e8d617653cce0ae3b
+          _type: spacerObject
+          spacing: small
+        - _key: 4a70fba6d4dd
+          _type: richTextObject
+          richTextContent:
+            - _key: a0ccda5e5135
+              _type: block
+              children:
+                - _key: f93cdd3bcefb0
+                  _type: span
+                  marks: []
+                  text: "Dolor sit amet lorem ipsum, consectetur adipiscing elit. Donec vitae lectus."
+              markDefs: []
+              style: normal
+        - _key: 8eca494c4871
+          _type: spacerObject
+          spacing: medium
+        - _key: b19eece22e86
+          _type: buttonObject
+          buttonAnchorLocation: currentPage
+          buttonPageReference:
+            _ref: 97854198-13ae-465a-a7f0-3fbc869d9324
+            _type: reference
+          buttonText: "Learn More"
+          buttonType: internal
+          buttonVariant: secondary
+          buttonWidth: auto
+          showButton: true
+      spacing: none
+      title: "Vulputate Nec Sisi"
+    - _key: be7fea1dc9ca2a8ae47f8f3652dc2a87
+      alignment: left
+      items:
+        - _key: 818742aed7fc
+          _type: singleImageObject
+          image:
+            _type: image
+            altText: "Lorem ipsum dolor sit amet"
+            aspectRatio: rectangle
+        - _key: 992e0e12716274fe4401437c11fe053d
+          _type: spacerObject
+          spacing: medium
+        - _key: a22591ffe2f0
+          _type: headingObject
+          headingSize: md
+          headingTag: h2
+          headingText: "Donec Vitae Lectus"
+        - _key: bc9185584849bf8e8d617653cce0ae3b
+          _type: spacerObject
+          spacing: small
+        - _key: 4a70fba6d4dd
+          _type: richTextObject
+          richTextContent:
+            - _key: a0ccda5e5135
+              _type: block
+              children:
+                - _key: f93cdd3bcefb0
+                  _type: span
+                  marks: []
+                  text: "Dolor sit amet lorem ipsum, consectetur adipiscing elit. Donec vitae lectus."
+              markDefs: []
+              style: normal
+        - _key: 8eca494c4871
+          _type: spacerObject
+          spacing: medium
+        - _key: b19eece22e86
+          _type: buttonObject
+          buttonAnchorLocation: currentPage
+          buttonPageReference:
+            _ref: 97854198-13ae-465a-a7f0-3fbc869d9324
+            _type: reference
+          buttonText: "Learn More"
+          buttonType: internal
+          buttonVariant: secondary
+          buttonWidth: auto
+          showButton: true
+      spacing: none
+      title: "Donec Vitae Lectus"
+  columnsPerRow: "3"
+  title: "More About masterthepixel"
+callToActionBlock:
+  _key: e9985120e9b2
+  _type: callToActionBlock
+  buttons:
+    - _key: 9f13029a2210
+      _type: buttonObject
+      buttonPageReference:
+        _ref: 97854198-13ae-465a-a7f0-3fbc869d9324
+        _type: reference
+      buttonText: "Learn More"
+      buttonType: internal
+      buttonVariant: primary
+      showButton: true
+    - _key: bfea305f62b3
+      _type: buttonObject
+      buttonExternalUrl: "https://github.com/jamesreaco"
+      buttonText: "Star on GitHub"
+      buttonType: external
+      buttonVariant: outline
+      showButton: true
+  content:
+    - _key: 9eb9b80e7eab
+      _type: block
+      children:
+        - _key: f17f356fc7940
+          _type: span
+          marks: []
+          text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae lectus non metus gravida malesuada. Phasellus vulputate nec nisi sed elementum dolor sit."
+      markDefs: []
+      style: normal
 ---
 
-import { Hero, FeatureGrid, Testimonial } from '@/components/mdx';
+import { Hero, LogoBlock, FeatureGrid, FeaturesMinimal, MediaBlock, Testimonial, LatestPosts, CallToActionBlock } from '@/components/mdx';
 
 <Hero />
 
+<LogoBlock />
+
 <FeatureGrid />
 
+<FeaturesMinimal />
+
+<MediaBlock />
+
 <Testimonial />
+
+<LatestPosts />
+
+<CallToActionBlock />
