chore(local): save working changes (local-only commit)

--- a/content/posts/how-we-increased-revenue-by-300-with-one-simple-hack.mdx
+++ b/content/posts/how-we-increased-revenue-by-300-with-one-simple-hack.mdx
@@ -3,6 +3,14 @@ title: "How We Increased Revenue by 300% with One Simple Hack."
 slug: "how-we-increased-revenue-by-300-with-one-simple-hack"
 date: "2024-12-03T18:11:39Z"
 excerpt: "Curae dapibus interdum convallis cursus quam nulla, tincidunt pulvinar. In urna eget iaculis posuere sodales at malesuada mi."
+categories:
+  - "Growth"
+author:
+  name: "James Rea"
+  username: "jamesrea"
+  avatar:
+    asset:
+      url: "/uploads/production/home/4cb082608a5ce534905f2a468e1dd96b9b52d290-2560x318.png"
 seo:
   title: "How We Increased Revenue by 300% with One Simple Hack."
   description: "Lorem ipsum odor amet"
