--- a/content/posts/the-ultimate-guide-to-scaling-your-startup-in-90-days.mdx
+++ b/content/posts/the-ultimate-guide-to-scaling-your-startup-in-90-days.mdx
@@ -3,6 +3,14 @@ title: "The Ultimate Guide to Scaling Your Startup in 90 Days."
 slug: "the-ultimate-guide-to-scaling-your-startup-in-90-days"
 date: "2024-12-03T18:11:16Z"
 excerpt: "Nulla facilisi. Mauris consectetur, tellus at sodales tincidunt, nulla lorem efficitur nunc, in tincidunt nisi neque at metus. Phasellus tristique auctor."
+categories:
+  - "Growth"
+author:
+  name: "James Rea"
+  username: "jamesrea"
+  avatar:
+    asset:
+      url: "/uploads/production/home/4cb082608a5ce534905f2a468e1dd96b9b52d290-2560x318.png"
 seo:
   title: "The Ultimate Guide to Scaling Your Startup in 90 Days."
   description: "Lorem ipsum odor amet"
