--- a/content/posts/5-proven-strategies-to-skyrocket-your-conversion-rates.mdx
+++ b/content/posts/5-proven-strategies-to-skyrocket-your-conversion-rates.mdx
@@ -3,6 +3,14 @@ title: "5  Proven Strategies to Skyrocket Your Conversion Rates."
 slug: "5-proven-strategies-to-skyrocket-your-conversion-rates"
 date: "2024-12-03T18:10:32Z"
 excerpt: "Libero placerat hac nisi libero tempus metus in ullamcorper. Semper porta vulputate facilisis cursus mi molestie dignissim taciti nisis."
+categories:
+  - "CRO"
+author:
+  name: "James Rea"
+  username: "jamesrea"
+  avatar:
+    asset:
+      url: "/uploads/production/home/4cb082608a5ce534905f2a468e1dd96b9b52d290-2560x318.png"
 seo:
   title: "5  Proven Strategies to Skyrocket Your Conversion Rates."
   description: "Lorem ipsum odor amet"
