fix(blog): render MDX video blocks via PlayVideo + show categories in post header and sidebar; wire mdxComponents for posts

--- a/content/posts/5-proven-strategies-to-skyrocket-your-conversion-rates.mdx
+++ b/content/posts/5-proven-strategies-to-skyrocket-your-conversion-rates.mdx
@@ -53,14 +53,7 @@ Convallis ad vestibulum eros montes orci ipsum proin? Sapien aptent integer bibe
 3. Mattis convallis odio aliquet penatibus, elementum nibh.  
 
 
-```json
-{
-  "_key": "26e40dec639b",
-  "_type": "videoObject",
-  "title": "The Video Title",
-  "videoUrl": "https://www.youtube.com/watch?v=dQw4w9WgXcQ"
-}
-```
+<PlayVideo videoUrl="https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
 
 ##### Ique platea commodo faucibus
 
