--- a/content/posts/how-we-increased-revenue-by-300-with-one-simple-hack.mdx
+++ b/content/posts/how-we-increased-revenue-by-300-with-one-simple-hack.mdx
@@ -56,14 +56,7 @@ Convallis ad vestibulum eros montes orci ipsum proin? Sapien aptent integer bibe
 3. Mattis convallis odio aliquet penatibus, elementum nibh.  
 
 
-```json
-{
-  "_key": "4adf0453c0ed",
-  "_type": "videoObject",
-  "title": "The Video Title",
-  "videoUrl": "https://www.youtube.com/watch?v=dQw4w9WgXcQ"
-}
-```
+<PlayVideo videoUrl="https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
 
 ##### Ique platea commodo faucibus
 
