chore(blog): convert Sanity-style JSON blocks to MDX/HTML, add MDX heading ids + TOC extraction, wire PlayVideo into MDX

--- a/content/posts/5-proven-strategies-to-skyrocket-your-conversion-rates.mdx
+++ b/content/posts/5-proven-strategies-to-skyrocket-your-conversion-rates.mdx
@@ -33,16 +33,9 @@ Curae dapibus interdum convallis cursus quam nulla, tincidunt pulvinar. In urna 
 Viverra volutpat nascetur class justo quisque tincidunt. Accumsan feugiat nibh senectus primis morbi nostra vitae. Facilisi risus aenean nibh facilisis ultricies pretium. Dapibus elementum fusce luctus primis himenaeos mollis. Justo ornare lacus congue tristique platea commodo faucibus. Mus arcu dictum lectus bibendum congue at mauris. Amet efficitur ultricies pellentesque nullam vel consequat turpis.  
 
 
-```json
-{
-  "_key": "e0c7618ff67d",
-  "_type": "singleImageObject",
-  "image": {
-    "_type": "image",
-    "aspectRatio": "rectangle"
-  }
-}
-```
+<div className="mt-6 p-4 rounded-2xl border border-dashed prose-sm">
+  <img src="/assets/placeholder-cover.jpg" alt="" className="w-full rounded-lg object-cover" />
+</div>
 
 #### Dolor rutrum sit, vitae euismod
 
@@ -60,45 +53,18 @@ Convallis ad vestibulum eros montes orci ipsum proin? Sapien aptent integer bibe
 Torquent facilisis nisi euismod hendrerit senectus. Aliquet posuere pulvinar euismod pulvinar quis elementum praesent. Potenti etiam inceptos parturient elit faucibus mus. Torquent curabitur vehicula suspendisse gravida sit. Ornare facilisi integer sem augue mollis pharetra. Suscipit sem magna enim phasellus; pellentesque euismod. Nunc sodales montes vulputate ligula praesent condimentum amet. Ullamcorper dictumst efficitur, auctor maecenas aptent condimentum placerat. Platea facilisi arcu justo eleifend primis imperdiet in metus.  
 
 
-```json
-{
-  "_key": "a34646796753",
-  "_type": "singleImageObject",
-  "image": {
-    "_type": "image",
-    "altText": "Lorem ipsum odor amet.",
-    "aspectRatio": "rectangle"
-  }
-}
-```
+<div className="mt-6 p-4 rounded-2xl border border-dashed prose-sm">
+  <img src="/assets/placeholder-cover.jpg" alt="Lorem ipsum odor amet." className="w-full rounded-lg object-cover" />
+</div>
 
 ###### Suspendisse gravida sit
 
 Libero placerat hac nisi libero tempus metus in ullamcorper. Semper porta vulputate facilisis cursus mi molestie dignissim taciti nisi. Ultricies montes quisque dis efficitur quis netus sapien. Mattis convallis odio aliquet penatibus, elementum nibh. Mi consectetur pellentesque natoque montes platea penatibus varius! Primis leo diam viverra neque posuere dictumst. Egestas justo suspendisse netus conubia varius viverra.
 
-```json
-{
-  "_key": "9b112d2e823c",
-  "_type": "callToActionObject",
-  "buttons": [
-    {
-      "_key": "de3d18c857a5",
-      "_type": "buttonObject",
-      "buttonAnchorLocation": "currentPage",
-      "buttonPageReference": {
-        "_ref": "servicesPage",
-        "_type": "reference"
-      },
-      "buttonText": "Learn More",
-      "buttonType": "internal",
-      "buttonVariant": "tertiary",
-      "buttonWidth": "auto",
-      "showButton": true
-    }
-  ],
-  "callToActionParagraph": "Semper porta vulputate facilisis cursus mi molestie dignissim taciti nisi. Ultricies montes quisque dis.",
-  "callToActionTitle": "Have more questions about masterthepixel? "
-}
-```
+<div className="mt-8 p-6 rounded-2xl border border-dashed bg-gray-50">
+  <h3 className="text-lg font-semibold">Have more questions about masterthepixel?</h3>
+  <p className="mt-3 text-sm text-gray-600">Semper porta vulputate facilisis cursus mi molestie dignissim taciti nisi. Ultricies montes quisque dis.</p>
+  <a href="/services" className="inline-block mt-4 px-4 py-2 rounded-md bg-gray-900 text-white text-sm">Learn More</a>
+</div>
 
 
