--- a/content/posts/the-ultimate-guide-to-scaling-your-startup-in-90-days.mdx
+++ b/content/posts/the-ultimate-guide-to-scaling-your-startup-in-90-days.mdx
@@ -33,16 +33,9 @@ Curae dapibus interdum convallis cursus quam nulla, tincidunt pulvinar. In urna 
 Viverra volutpat nascetur class justo quisque tincidunt. Accumsan feugiat nibh senectus primis morbi nostra vitae. Facilisi risus aenean nibh facilisis ultricies pretium. Dapibus elementum fusce luctus primis himenaeos mollis. Justo ornare lacus congue tristique platea commodo faucibus. Mus arcu dictum lectus bibendum congue at mauris. Amet efficitur ultricies pellentesque nullam vel consequat turpis.  
 
 
-```json
-{
-  "_key": "7f6a1e1c253d",
-  "_type": "singleImageObject",
-  "image": {
-    "_type": "image",
-    "aspectRatio": "rectangle"
-  }
-}
-```
+<div className="mt-6 p-4 rounded-2xl border border-dashed prose-sm">
+  <img src="/assets/placeholder-cover.jpg" alt="" className="w-full rounded-lg object-cover" />
+</div>
 
 #### Dolor rutrum sit, vitae euismod
 
@@ -53,31 +46,16 @@ Convallis ad vestibulum eros montes orci ipsum proin? Sapien aptent integer bibe
 3. Mattis convallis odio aliquet penatibus, elementum nibh.  
 
 
-```json
-{
-  "_key": "0150c574d3e7",
-  "_type": "videoObject",
-  "title": "The Video Title",
-  "videoUrl": "https://www.youtube.com/watch?v=dQw4w9WgXcQ"
-}
-```
+<PlayVideo videoUrl="https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
 
 ##### Ique platea commodo faucibus
 
 Torquent facilisis nisi euismod hendrerit senectus. Aliquet posuere pulvinar euismod pulvinar quis elementum praesent. Potenti etiam inceptos parturient elit faucibus mus. Torquent curabitur vehicula suspendisse gravida sit. Ornare facilisi integer sem augue mollis pharetra. Suscipit sem magna enim phasellus; pellentesque euismod. Nunc sodales montes vulputate ligula praesent condimentum amet. Ullamcorper dictumst efficitur, auctor maecenas aptent condimentum placerat. Platea facilisi arcu justo eleifend primis imperdiet in metus.  
 
 
-```json
-{
-  "_key": "beebbbaaaca6",
-  "_type": "singleImageObject",
-  "image": {
-    "_type": "image",
-    "altText": "Lorem ipsum odor amet.",
-    "aspectRatio": "rectangle"
-  }
-}
-```
+<div className="mt-6 p-4 rounded-2xl border border-dashed prose-sm">
+  <img src="/assets/placeholder-cover.jpg" alt="Lorem ipsum odor amet." className="w-full rounded-lg object-cover" />
+</div>
 
 ###### Suspendisse gravida sit
 
