--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -93,7 +93,7 @@ import { PageBuilder } from '@/components/page-builder';
           {
             "_key": "995ef7eed927",
             "_type": "singleImageObject",
-            "image": { "_type": "image", "altText": "Lorem ipsum dolor sit amet", "aspectRatio": "rectangle" }
+            "image": { "_type": "image", "url": "/uploads/production/home/3b6d05638ce7cef7153b329556c0f850292d9ea3-1920x1280.jpg", "altText": "Lorem ipsum dolor sit amet", "aspectRatio": "rectangle" }
           },
           { "_key": "d19a1549a3bb", "_type": "spacerObject", "spacing": "medium" },
           { "_key": "c29e96491a36", "_type": "headingObject", "headingSize": "md", "headingTag": "h2", "headingText": "Vulputate Nec Sisi" },
@@ -109,8 +109,8 @@ import { PageBuilder } from '@/components/page-builder';
         "_key": "6e75c8392fbcba6b44ad3caa40a81e5b",
         "alignment": "left",
         "items": [
-          { "_key": "4467336a4bf8", "_type": "singleImageObject", "image": { "_type": "image", "altText": "Lorem ipsum dolor sit amet", "aspectRatio": "rectangle" } },
-          { "_key": "2427a59b03fa", "_type": "spacerObject", "spacing": "medium" },
+          { "_key": "4467336a4bf8", "_type": "singleImageObject", "image": { "_type": "image", "url": "/uploads/production/home/5f21d7525e86a3b12d4dcb34d4046440919b3b79-1920x1280.jpg", "altText": "Lorem ipsum dolor sit amet", "aspectRatio": "rectangle" } },
+          { "_key": "2427a59b03fa", "_type": "spacerObject", "spacing": "medium" }
           { "_key": "3b9abdd1460c", "_type": "headingObject", "headingSize": "md", "headingTag": "h2", "headingText": "Donec Vitae Lectus" },
           { "_key": "c0dd9125f9be", "_type": "spacerObject", "spacing": "small" },
           { "_key": "0d58d96ad1b6", "_type": "richTextObject", "richTextContent": [ { "_key": "74ed6cae82c0", "_type": "block", "children": [ { "_key": "4a2cbab27536", "_type": "span", "text": "Dolor sit amet lorem ipsum, consectetur adipiscing elit. Donec vitae lectus." } ], "style": "normal" } ] },
