chore(content): change sample post slug to avoid duplicate-key collision in LatestPosts

--- a/content/posts/sample.mdx
+++ b/content/posts/sample.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Sample Post"
-slug: "sample-post"
+title: "Sample Post (MDX)"
+slug: "sample-mdx"
 date: "2025-01-01T00:00:00Z"
 excerpt: "This is a sample post to test the MDX content system."
 seo:
