--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -74,10 +74,10 @@ logoBlock:
     - _key: 868f11b3b502
       image:
         _type: image
-        url: "/uploads/production/home/4cb082608a5ce534905f2a468e1dd96b9b52d290-2560x318.png"
-      link: "https://tailwindcss.com"
+        url: "/uploads/masterthepixel_logo.svg"
+      link: "https://masterthepixel.io"
       size: large
-      title: "Tailwind"
+      title: "masterthepixel"
     - _key: c4a8a1d69047
       image:
         _type: image
@@ -147,6 +147,7 @@ featureGridBlock:
       description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae lectus non metus."
       image:
         _type: image
+        url: "https://cdn.sanity.io/images/5ywyt4ng/production/e5a8045d9b8c95747beba9d7953e86d4ad880194-1920x1280.jpg"
       items:
         - "Excepteur nisi proident sunt aliquip ipsum dolore."
         - "Veniam exercitation dolor magna laboris ut officia."
@@ -165,6 +166,7 @@ featureGridBlock:
       description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae lectus non metus."
       image:
         _type: image
+        url: "https://cdn.sanity.io/images/5ywyt4ng/production/4d3aab04b351bf872980bb210c4a5e44a29d1a0d-1920x1459.jpg"
       items:
         - "Minim voluptate dolore aliqua fugiat duis proident."
         - "Irure dolor magna aliqua nisi excepteur adipisicing."
@@ -219,6 +221,7 @@ mediaBlock:
   dialogType: video
   image:
     _type: image
+    url: "https://cdn.sanity.io/images/5ywyt4ng/production/e5a8045d9b8c95747beba9d7953e86d4ad880194-1920x1280.jpg"
     altText: "Lorem Ipsum Dolor Amit"
   overlayType: dark
   videoUrl: "https://www.youtube.com/watch?v=dQw4w9WgXcQ"
@@ -232,14 +235,35 @@ testimonialBlock:
   heading: "Our Happy Customers"
   testimonials:
     - _key: 9ebf095186b5
-      _ref: 27fe199b-939c-405b-9508-105a53a7d1f8
-      _type: reference
+      _id: testimonial-1
+      name: "Roland Whitmore"
+      jobTitle: "Head of Marketing"
+      company: "Aven"
+      quote: "SiteEngine lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent condimentum lacus vitae urna varius, sed pulvinar turpis dignissim. Sed fringilla metus at neque egestas, in efficitur quam aliquet."
+      avatar:
+        url: "/assets/placeholder-cover.jpg"
+      logo:
+        url: "/assets/placeholder-cover.jpg"
     - _key: a47881ceae5f
-      _ref: ba5ce2a6-eefd-443b-b5e2-8e65b77a5729
-      _type: reference
+      _id: testimonial-2
+      name: "Senna Nightingale"
+      jobTitle: "Marketing Manager"
+      company: "Treva"
+      quote: "SiteEngine pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec in lacus vel nisi venenatis faucibus. Nulla facilisi. Sed tempor felis eget enim."
+      avatar:
+        url: "/assets/placeholder-cover.jpg"
+      logo:
+        url: "/assets/placeholder-cover.jpg"
     - _key: 1d40f18648a8
-      _ref: 95596b7e-e545-4a82-bdcc-7cb4a8b369d7
-      _type: reference
+      _id: testimonial-3
+      name: "Thera Blackwood"
+      jobTitle: "Community Manager"
+      company: "Circle"
+      quote: "SiteEngine vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse potenti. Cras suscipit lectus nec libero vehicula, at tincidunt enim congue."
+      avatar:
+        url: "/assets/placeholder-cover.jpg"
+      logo:
+        url: "/assets/placeholder-cover.jpg"
 freeformBlock:
   _key: 3f4c64bf4370
   _type: freeformBlock
